--- a/loancalculator.html
+++ b/loancalculator.html
@@ -61,8 +61,44 @@
         /*
         /* this script defines the calcuklate function called by the event handlers in the html aove. 
         the function reads tghe value from <input> elements , calculates loan paymebts information, displays 
-
+        // the results in  the span elements. it also saves the user's data, displays links to lenders, draw a chat./
         
+        */ 
+       
+        function calculate() {
+            // look for the input and output elements in the document 
+            var amount = document.getElementById("amount")
+            var apr = document.getElementById("apr")
+            var years = document.getElementById("years")
+            var zipcode = document.getElementById("zipcode")
+            var Payment = document.getElementById("Payment")
+            var total = document.getElementById("total")
+            var totalinterest = document.getElementById("totalinterest") 
+
+            // Get 
+
+            var principal = parseFloat(amount.value)
+            var interest = parseFloat(apr.value) / 100 / 12
+            var payment = parseFloat(years.value)* 12
+            // computer the monthly payment figure
+            var x = Math.pow(1 + interest, payment)
+            var
+            // Before displaing 
+
+            if (isFinite(monthly)) {
+                // fill in the output fields, rounding to 2 decimals 
+                //pieces 
+
+                payment.innerHTML = monthly.toFixed(2);
+                total.innerHTML = (monthly * payments).toFixed(2)
+                totalinterest.innerHTML = ((monthly * payments) - principal).toFixed(2);
+
+                // save the users input so we can restore it the next time they visit
+                save(amount.value, apr.value, years.value, zipcode.value);
+                        }
+
+
+        }
     </script>
 
 </body>
