--- a/loancalculator.html
+++ b/loancalculator.html
@@ -82,7 +82,7 @@
             var payment = parseFloat(years.value)* 12
             // computer the monthly payment figure
             var x = Math.pow(1 + interest, payment)
-            var
+            var monthly = (principal)
             // Before displaing 
 
             if (isFinite(monthly)) {
@@ -95,10 +95,51 @@
 
                 // save the users input so we can restore it the next time they visit
                 save(amount.value, apr.value, years.value, zipcode.value);
+
+                try {
+                    getLenders(amount.value, apr.value, years.value, zipcode.value);
+                }
+                catch (e) {
+                    // ignore the error
+                    alert("error")
+                }
+                chart(principal, interest, monthly, payments);
+
+                else {
+                    // result ws Not-a-number or infinite, which means that the input was incomplete 
+                    // in this case, we clear any previous input
+                    
+                payment.innerHTML = "";
+                total.innerHTML = "";
+                totalinterest.innerHTML = "";
+                chart();
+                }
                         }
 
+               
 
         }
+        // save the user's input as properties of tech localstorage object. those properties will still bve there 
+        // when the user visits in the futuree 
+        function save(amount, apr, years, zipcode) {
+                    if (window.localStorage) {
+                        localStorage.loan_amount = amount;
+                        localStorage.loan_apr = apr;
+                        localStorage.load_years = years;
+                        localStorage.loan_zipcode = zipcode;
+
+                    }
+                    // Automatically attempt to restore input fields when the document first loads. 
+                    window.onloadb = function() {
+                        if (window.localStorage && localStorage.loan_amount) {
+                            document.getElementById("amount").value = localStorage.loan_amount;
+                            document.getElementById("apr").value = localStorage.loan_apr;
+                            document.getElementById("years").value = localStorage.load_years;
+                            document.getElementById("zipcode").value = localStorage.loan_zipcode
+                        }
+                    }
+                }       
+
     </script>
 
 </body>
